# tctac

./: .gitignore  LICENSE  README.md  TAGS  comp.sh  kill.sh  kill2.sh  stack.yaml  table.html  tctac.cabal
AraBestCaseSize/: #3.42.trs.result  4.61.trs.proof  4.61.trs.result  String0_prefix.raml.trs.result  String0_string_dec.raml.trs.result  ack.trs.result  add.trs.result  addition.trs.result  addlists.trs.result  anchored.trs.result  append.trs.result  appendAll.raml.trs.proof  appendAll.raml.trs.result  assrewrite.trs.result  badd.trs.result  bfs.raml.trs.result  bft_mmult.raml.trs.result  binom.trs.result  binomialHeaps.okasaki.trs.result  binomialHeaps_insTree.okasaki.trs.result  binomialHeaps_merge.okasaki.trs.result  bitonic.raml.trs.result  bits.trs.result  bitvectors.raml.trs.proof  bitvectors.raml.trs.result  bottomUpMergeSort.okasaki.trs.result  bubblesort-nat.trs.result  clevermmult.raml.trs.result  clique.trs.result  cube.trs.result  dcquad.trs.proof  dcquad.trs.result  decrease.trs.result  dense.okasaki.trs.result  dfs-flatten.trs.result  disjconj.trs.result  duplicates.raml.trs.result  dyade.raml.trs.result  egypt.trs.result  eq.trs.result  (+91 more)
AraBestCaseSizeNoCd/: #3.42.trs.result  4.61.trs.result  String0_prefix.raml.trs.result  String0_string_dec.raml.trs.result  ack.trs.result  add.trs.result  addition.trs.proof  addition.trs.result  addlists.trs.result  anchored.trs.result  append.trs.result  appendAll.raml.trs.result  assrewrite.trs.result  badd.trs.result  bfs.raml.trs.result  bft_mmult.raml.trs.result  binom.trs.result  binomialHeaps.okasaki.trs.result  binomialHeaps_insTree.okasaki.trs.result  binomialHeaps_merge.okasaki.trs.result  bitonic.raml.trs.result  bits.trs.result  bitvectors.raml.trs.result  bottomUpMergeSort.okasaki.trs.result  bubblesort-nat.trs.result  clevermmult.raml.trs.result  clique.trs.result  cube.trs.proof  cube.trs.result  dcquad.trs.proof  dcquad.trs.result  decrease.trs.result  dense.okasaki.trs.result  dfs-flatten.trs.result  disjconj.trs.result  duplicates.raml.trs.result  dyade.raml.trs.result  egypt.trs.result  eq.trs.result  eratosthenes.trs.result  (+92 more)
AraBestCaseTraceV1/: #3.42.trs.result  4.61.trs.result  String0_prefix.raml.trs.result  String0_string_dec.raml.trs.result  ack.trs.result  add.trs.proof  add.trs.result  addition.trs.proof  addition.trs.result  addlists.trs.result  anchored.trs.result  append.trs.result  appendAll.raml.trs.result  assrewrite.trs.result  badd.trs.result  bfs.raml.trs.result  bft_mmult.raml.trs.result  binom.trs.result  binomialHeaps.okasaki.trs.result  binomialHeaps_insTree.okasaki.trs.result  binomialHeaps_merge.okasaki.trs.result  bitonic.raml.trs.result  bits.trs.result  bitvectors.raml.trs.result  bottomUpMergeSort.okasaki.trs.result  bubblesort-nat.trs.result  clevermmult.raml.trs.result  clique.trs.result  cube.trs.result  dcquad.trs.proof  dcquad.trs.result  decrease.trs.result  dense.okasaki.trs.proof  dense.okasaki.trs.result  dfs-flatten.trs.result  disjconj.trs.result  duplicates.raml.trs.proof  duplicates.raml.trs.result  dyade.raml.trs.result  egypt.trs.result  (+93 more)
AraBestCaseTraceV1CF/: #3.42.trs  #3.42.trs.proof  #3.42.trs.result  4.61.trs.result  String0_prefix.raml.trs.result  String0_string_dec.raml.trs.proof  String0_string_dec.raml.trs.result  ack.trs.result  add.trs.result  addition.trs.result  addlists.trs.result  anchored.trs.result  append.trs.result  appendAll.raml.trs.result  assrewrite.trs.result  badd.trs.proof  badd.trs.result  bfs.raml.trs.result  bft_mmult.raml.trs.result  binom.trs.result  binomialHeaps.okasaki.trs.result  binomialHeaps_insTree.okasaki.trs.result  binomialHeaps_merge.okasaki.trs.result  bitonic.raml.trs.result  bits.trs.result  bitvectors.raml.trs.result  bottomUpMergeSort.okasaki.trs.result  bubblesort-nat.trs.result  clevermmult.raml.trs.result  clique.trs.result  cube.trs.result  dcquad.trs.proof  dcquad.trs.result  decrease.trs.proof  decrease.trs.result  dense.okasaki.trs.result  dfs-flatten.trs.result  disjconj.trs.result  duplicates.raml.trs.result  dyade.raml.trs.proof  (+90 more)
AraBestCaseTraceV1CFHeur/: #3.42.trs.result  4.61.trs.proof  4.61.trs.result  String0_prefix.raml.trs.proof  String0_prefix.raml.trs.result  String0_string_dec.raml.trs.result  ack.trs.result  add.trs.result  addition.trs.result  addlists.trs.result  anchored.trs.result  append.trs.result  appendAll.raml.trs.result  assrewrite.trs.result  badd.trs.result  bfs.raml.trs.proof  bfs.raml.trs.result  bft_mmult.raml.trs.result  binom.trs.result  binomialHeaps.okasaki.trs.result  binomialHeaps_insTree.okasaki.trs.result  binomialHeaps_merge.okasaki.trs.result  bitonic.raml.trs.result  bits.trs.result  bitvectors.raml.trs.result  bottomUpMergeSort.okasaki.trs.result  bubblesort-nat.trs.proof  bubblesort-nat.trs.result  clevermmult.raml.trs.proof  clevermmult.raml.trs.result  clique.trs.result  cube.trs.result  dcquad.trs.proof  dcquad.trs.result  decrease.trs.proof  decrease.trs.result  dense.okasaki.trs.result  dfs-flatten.trs.result  disjconj.trs.result  duplicates.raml.trs.result  (+90 more)
AraBestCaseTraceV1Heur/: #3.42.trs.result  4.61.trs.result  String0_prefix.raml.trs.result  String0_string_dec.raml.trs.result  ack.trs.result  add.trs.result  addition.trs.proof  addition.trs.result  addlists.trs.result  anchored.trs.result  append.trs.result  appendAll.raml.trs.result  assrewrite.trs.result  badd.trs.result  bfs.raml.trs.proof  bfs.raml.trs.result  bft_mmult.raml.trs.result  binom.trs.result  binomialHeaps.okasaki.trs.result  binomialHeaps_insTree.okasaki.trs.result  binomialHeaps_merge.okasaki.trs.result  bitonic.raml.trs.result  bits.trs.result  bitvectors.raml.trs.result  bottomUpMergeSort.okasaki.trs.result  bubblesort-nat.trs.result  clevermmult.raml.trs.result  clique.trs.result  cube.trs.result  dcquad.trs.proof  dcquad.trs.result  decrease.trs.result  dense.okasaki.trs.result  dfs-flatten.trs.result  disjconj.trs.result  (+92 more)
(+3264 files in other folders)
