name:                tctac
version:             0.0.0.0
synopsis:            Experiments
description:         Please see README.md
homepage:            http://github.com/ComputationWithBoundedResources/tctac#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schaper
maintainer:          michael.schaper@uibk.ac.at
copyright:           2016, Michael Schaper
category:            Utils
build-type:          Simple
extra-source-files:
                   README.md
data-files:
           etc/experiments.css
           etc/sort_ascending.png
           etc/sort_descending.png
           etc/table.js
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ComputationWithBoundedResources/tctac/

executable tctac-exe
  main-is:        Main.hs
  hs-source-dirs: src
  build-depends:  base == 4.*, tctac
  ghc-options:
    -Wall -threaded -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  build-depends:
                aeson,
                base >= 4.7 && < 5,
                blaze-html,
                bytestring,
                containers,
                csv,
                directory,
                filepath,
                mtl,
                old-time,
                optparse-applicative,
                pooled-io,
                process,
                shakespeare,
                text,
                unix,
                split,
                timeout


library
  hs-source-dirs:
                 src
  exposed-modules:
                  Runner
                  Summer
                  Util
  other-modules:
                Paths_tctac
  build-depends:
                aeson,
                base >= 4.7 && < 5,
                blaze-html,
                bytestring,
                containers,
                csv,
                directory,
                filepath,
                mtl,
                old-time,
                optparse-applicative,
                pooled-io,
                process,
                shakespeare,
                text,
                unix,
                split,
                timeout
    -- turtle
  ghc-options:
              -Wall
  default-language: Haskell2010


